Major version update for wicket and spring